--- a/rabbithole/frontend/templates/layout.html
+++ b/rabbithole/frontend/templates/layout.html
@@ -14,23 +14,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.php">Friendemic Twitter</a>
+                <a class="navbar-brand" href="index.php">Rabbithole</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.php?controller=Home&action=about">About</a>
+                        <a href="/about">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container">
-      <div class="row row-offcanvas row-offcanvas-right">
+      <div class="row">
         <div class="col-xs-12 col-sm-7">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
           <div class="row">
             {% block content %}{% endblock %}
           </div><!--/row-->
